--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </li>
 
                             <li>
-                                <a href="#galery">Gallery</a>
+                                <a href="#gallery">Gallery</a>
                             </li>
 
                             <li>
@@ -66,7 +66,7 @@
             </li>
 
             <li>
-                <a href="#galery">Gallery</a>
+                <a href="#gallery">Gallery</a>
             </li>
 
             <li>
@@ -80,35 +80,42 @@
         <div class="slider">
             <ul class="slides">
               <li>
-                <img src="https://tse2.mm.bing.net/th?id=OIP.fTTzgomizCxzKwg1qJ61nQHaEM&pid=Api&P=0&w=315&h=179"> <!-- random image -->
+                <img src="https://tse2.mm.bing.net/th?id=OIP.G-leGVYTHcHedv3VbJUHWQHaE6&pid=Api&P=0&w=226&h=151"> <!-- random image -->
                 <div class="caption center-align">
                   <h2>Take Your dream Vocation</h2>
                   <h5 class="light grey-text text-lighten-3 hide-on-small-only">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error aspernatur voluptas tempora magni, asperiores 
                     a doloribus?</h5>
+                    <button type="submit" class="btn">Learn More</button>
+
                 </div>
               </li>
               <li>
-                <img src="https://tse2.mm.bing.net/th?id=OIP.5StFCGxk-5eoQjS0VlQtPwHaEn&pid=Api&P=0&w=274&h=172"> <!-- random image -->
+                <img src="https://tse2.mm.bing.net/th?id=OIP.E6_9mnOhnk5YMHGHx2hAkQHaHa&pid=Api&P=0&w=300&h=300"> <!-- random image -->
                 <div class="caption left-align">
                   <h3>We work with all budget</h3>
                   <h5 class="light grey-text text-lighten-3 hide-on-small-only">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dolorum totam? Quibusdam
                        enim ratione blanditiis ex, facilis vero perferendis a..</h5>
+                       <button type="submit" class="btn">Learn More</button>
                 </div>
               </li>
               <li>
-                <img src="https://tse4.mm.bing.net/th?id=OIP.UevJhRrnPDp0psee77jM1gHaEK&pid=Api&P=0&w=278&h=157"> <!-- random image -->
+                <img src="https://tse2.mm.bing.net/th?id=OIP.EDhGXve1S3YD9KbifA2IDAHaHa&pid=Api&P=0&w=300&h=300"> <!-- random image -->
                 <div class="caption right-align">
                   <h2>Group & individuel gateAway</h2>
                   <h5 class="light grey-text text-lighten-3 hide-on-small-only">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, nisi officia. Repellat 
                      strum molestiae.</h5>
+                     <button type="submit" class="btn">Learn More</button>
+
                 </div>
               </li>
               <li>
-                <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151"> <!-- random image -->
+                <img src="https://tse4.mm.bing.net/th?id=OIP.vXIqM7Jd7ADFv4VO_McuAwHaHM&pid=Api&P=0&w=171&h=167"> <!-- random image -->
                 <div class="caption center-align">
                   <h2>This is our big Tagline!</h2>
                   <h5 class="light grey-text text-lighten-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dignissimos nemo iste obcaecati 
                      nobis similique..</h5>
+                     <button type="submit" class="btn">Learn More</button>
+
                 </div>
               </li>
             </ul>
@@ -180,7 +187,7 @@
 
           <!---   Section Popular Places  -->
 
-          <section id="populaire" class="section section-popular scrollspy">
+          <section id="popular" class="section section-popular scrollspy">
               <div class="container">
                   <div class="row">
                       <h4 class="center"><span class="teal-text">Popular Places</span></h4>
@@ -242,19 +249,19 @@
                           <h4>Follow TravelVille</h4>
                           <p>Follow us on social media for special offers</p>
                           <a href="#" class="white-text">
-                            <i class="fab fa-facebook fa-4x"></i>
+                            <i class="fa fa-facebook-official fa-4x aria-hidden="true"></i>
                           </a>
 
                           <a href="#" class="white-text">
-                            <i class="fab fa-instagram fa-4x"></i>
+                            <i class="fa fa-linkedin fa-4x" aria-hidden="true"></i>
                            </a>
 
                            <a href="#" class="white-text">
-                            <i class="fab fa-pinterest fa-4x"></i>
+                            <i class="fa fa-pinterest-p fa-4x" aria-hidden="true"></i>   
                            </a>
 
                           <a href="#" class="white-text">
-                            <i class="fab fa-twitter fa-4x"></i>
+                            <i class="fa fa-twitter fa-4x" aria-hidden="true"></i>
                           </a>
                       </div>
                   </div>
@@ -381,7 +388,7 @@
                             </div>
 
                             <div class="input-field">
-                                <textarea class="materialize-textarea" placeholder="Message">
+                                <textarea class="materialize-textarea" placeholder="Message"></textarea>
                             </div>
 
                             <input type="submit" value="Submit" class="btn">
