--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                       <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="img1">
+                                <img src="https://tse3.mm.bing.net/th?id=OIP.qohZae7fq80lDWtS91V8LQHaEy&pid=Api&P=0&w=291&h=189" alt="img1">
                                 <span class="card-title">
                                     Cancum, Mexico
                                 </span>
@@ -224,7 +224,7 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="img1">
+                                <img src="https://tse4.mm.bing.net/th?id=OIP.MY-LE_6NUa9HyCm1QA7MXQHaE8&pid=Api&P=0&w=241&h=162" alt="img1">
                                 <span class="card-title">
                                     Cancum, Mexico
                                 </span>
@@ -282,66 +282,66 @@
 
                   <div class="row">
                       <div class="col s12 m3">
-                          <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                          <img width="100%" height="100%" src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
                           class="materialboxed responsive-img">
                       </div>
 
                       <div class="col s12 m3">
-                        <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                        <img width="100%" height="100%" src="https://tse2.mm.bing.net/th?id=OIP.rnj2zP1MU0epgmyzcvn4nQHaE8&pid=Api&P=0&w=254&h=170" alt="" 
                         class="materialboxed responsive-img">
                       </div>
 
                       <div class="col s12 m3">
-                        <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                        <img width="100%" height="100%" src="https://tse3.mm.bing.net/th?id=OIP.hDgZAZ3pMHWjqs4WtDgCxQHaEK&pid=Api&P=0&w=297&h=168" alt="" 
                         class="materialboxed responsive-img">
                       </div>
 
                       <div class="col s12 m3">
-                        <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                        <img width="100%" height="100%" src="https://tse2.mm.bing.net/th?id=OIP.Njmqmaig5ohI381n_XlTowHaDz&pid=Api&P=0&w=390&h=201" alt="" 
                         class="materialboxed responsive-img">
                       </div>
                   </div>
 
                   <div class="row">
                     <div class="col s12 m3">
-                        <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                        <img width="100%" height="100%" src="https://tse3.mm.bing.net/th?id=OIP.myWGDJoQRSijW0c32H-T0gHaD4&pid=Api&P=0&w=310&h=163" alt="" 
                         class="materialboxed responsive-img">
                     </div>
 
                     <div class="col s12 m3">
-                      <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                      <img width="100%" height="100%" src="https://tse2.mm.bing.net/th?id=OIP.1tPL38iMwAohALEanMFsIQHaEo&pid=Api&P=0&w=264&h=166" alt="" 
                       class="materialboxed responsive-img">
                     </div>
 
                     <div class="col s12 m3">
-                      <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                      <img width="100%" height="100%" src="https://tse2.mm.bing.net/th?id=OIP.O8sHdU0ly3bxNwcC55yMXQHaC2&pid=Api&P=0&w=458&h=177" alt="" 
                       class="materialboxed responsive-img">
                     </div>
 
                     <div class="col s12 m3">
-                      <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                      <img width="100%" height="100%" src="https://tse4.mm.bing.net/th?id=OIP.USS7rr6-RS18Gh-hzbLOMwHaD4&pid=Api&P=0&w=344&h=181" alt="" 
                       class="materialboxed responsive-img">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col s12 m3">
-                        <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                        <img width="100%" height="100%" src="https://tse3.mm.bing.net/th?id=OIP.bTm8Ku9VIRDkqPJ5ZiCgTQHaE2&pid=Api&P=0&w=294&h=194" alt="" 
                         class="materialboxed responsive-img">
                     </div>
 
                     <div class="col s12 m3">
-                      <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                      <img width="100%" height="100%" src="https://tse2.mm.bing.net/th?id=OIP.Vo6flKFZ4DcB86-7hZ_8xwHaD3&pid=Api&P=0&w=345&h=181" alt="" 
                       class="materialboxed responsive-img">
                     </div>
 
                     <div class="col s12 m3">
-                      <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                      <img width="100%" height="100%" src="https://tse1.mm.bing.net/th?id=OIP.cVYt2qjhE5Q6PP5Sst-HrgHaFj&pid=Api&P=0&w=254&h=191" alt="" 
                       class="materialboxed responsive-img">
                     </div>
 
                     <div class="col s12 m3">
-                      <img src="https://tse3.mm.bing.net/th?id=OIP.hoO8DpDSebz7WbLXT0F7CQHaEK&pid=Api&P=0&w=267&h=151" alt="" 
+                      <img src="https://tse3.mm.bing.net/th?id=OIP.-wAbckdACxBX4kHIckD2ogHaDF&pid=Api&P=0&w=453&h=189" alt="" 
                       class="materialboxed responsive-img">
                     </div>
                 </div>
